<resources>
    <string name="app_name">ProjectManager</string>
    <string name="title_home">Graph</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_data">Data</string>
    <string name="title_advanced">Characteristics</string>
    <string name="data_header_column_1">Name</string>
    <string name="data_header_column_2">Duration Pessimistic</string>
    <string name="data_header_column_3">Duration</string>
    <string name="data_header_column_4">Duration Optimistic</string>
    <string name="data_header_column_5">Required works</string>
    <string name="works_header_column_1">работа</string>
    <string name="works_header_column_2">ожидаемая длительность</string>
    <string name="works_header_column_3">дисперсия</string>
    <string name="works_header_column_4">ранний срок начала</string>
    <string name="works_header_column_5">поздний срок начала</string>
    <string name="works_header_column_6">ранний срок окончания</string>
    <string name="events_header_column_1">событие</string>
    <string name="events_header_column_2">ранний срок</string>
    <string name="events_header_column_3">поздний срок</string>
    <string name="events_header_column_4">резерв времени</string>
    <string name="enter_path">0,2,3</string>
    <string name="calculate">посчитать</string>
    <string name="path_reserved_time">резерв времени:</string>
    <string name="path_tension">коэффициент напряженности:</string>
    <string name="path_reserved_time_value">0</string>
    <string name="path_tension_value">0</string>
    <string name="works_header_column_7">поздний срок окончания</string>
    <string name="works_header_column_8">полный резерв времени</string>
    <string name="works_header_column_9">независимый резерв времени</string>
    <string name="path_calculation_text">рассчет характеристик дуги</string>
    <string name="prob_from_time_text">вероятность того, что проект завершится быстрее, чем за срок T</string>
    <string name="prob_from_time_probability_text">вероятность:</string>
    <string name="prob_from_time_probability_value">0</string>
    <string name="prob_from_time_hint">T</string>
    <string name="time_from_prob_text">максимальный срок проекта с вероятностью а</string>
    <string name="time_from_prob_time_text">максимальный срок:</string>
    <string name="prob_from_time_time_value">0</string>
    <string name="interval_text">получить доверительный интервал для вероятности а</string>
    <string name="interval_final_text">интервал:</string>
    <string name="interval_final_value">[0;0]</string>
    <string name="critical_path_text">характеристики критического пути</string>
    <string name="path_lenght">длина:</string>
    <string name="path_dispersion">дисперсия в квадрате:</string>
    <string name="path_length">длина:</string>
    <string name="path_path">путь:</string>
    <string name="path_path_value">0</string>
    <string name="basic_mode">basic mode</string>
    <string name="expert_mode">expert mode</string>
    <string name="advanced_mode">advanced mode</string>
    <string name="button_add_work">добавить</string>
    <string name="dialog_add_work_header">добавить работу</string>
    <string name="cancel">отменить</string>
    <string name="delete_work">удалить работу?</string>
    <string name="optimization">Optimization</string>
</resources>