<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/path_calculation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/critical_path_text"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/path_path_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_path"
        app:layout_constraintStart_toStartOf="@id/path_calculation_text"
        app:layout_constraintTop_toBottomOf="@id/path_calculation_text" />
    <TextView
        android:id="@+id/path_path_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_path_value"
        app:layout_constraintStart_toEndOf="@id/path_path_text"
        app:layout_constraintTop_toBottomOf="@id/path_calculation_text" />


    <TextView
        android:id="@+id/path_reserved_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_dispersion"
        app:layout_constraintStart_toStartOf="@id/path_path_text"
        app:layout_constraintTop_toBottomOf="@id/path_path_text" />
    <TextView
        android:id="@+id/path_dispersion_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_reserved_time_value"
        app:layout_constraintStart_toEndOf="@id/path_reserved_time_text"
        app:layout_constraintTop_toBottomOf="@id/path_path_text" />
    <TextView
        android:id="@+id/path_tension_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_length"
        app:layout_constraintStart_toStartOf="@id/path_reserved_time_text"
        app:layout_constraintTop_toBottomOf="@id/path_reserved_time_text" />
    <TextView
        android:id="@+id/path_length_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_tension_value"
        app:layout_constraintStart_toEndOf="@id/path_tension_text"
        app:layout_constraintTop_toBottomOf="@id/path_reserved_time_text" />



</androidx.constraintlayout.widget.ConstraintLayout>