<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/prob_from_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prob_from_time_text"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/path_input"
        android:layout_width="120dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/prob_from_time_hint"
        app:layout_constraintStart_toStartOf="@id/prob_from_time_text"
        app:layout_constraintTop_toBottomOf="@id/prob_from_time_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/path_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/path_input"
        app:layout_constraintTop_toBottomOf="@id/prob_from_time_text"
        />
    <TextView
        android:id="@+id/path_reserved_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prob_from_time_probability_text"
        app:layout_constraintStart_toStartOf="@id/path_input"
        app:layout_constraintTop_toBottomOf="@id/path_input" />
    <TextView
        android:id="@+id/prob_from_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prob_from_time_probability_value"
        app:layout_constraintStart_toEndOf="@id/path_reserved_time_text"
        app:layout_constraintTop_toBottomOf="@id/path_input" />





</androidx.constraintlayout.widget.ConstraintLayout>